--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
+  flutter_secure_storage: ^8.1.0
+  uuid: ^4.0.0
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
